--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-
+html {
+  height: 100%;
+}
 body {
     font-family: Arial;
     margin-left: 5%;
@@ -22,7 +24,7 @@ body {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1200px;
+    max-width: 62%;
     object-fit: contain;
     
   }
